# TDT

./: CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
notebooks/: dashboard.ipynb  pca_charts_for_report.ipynb
src/tdt/: __init__.py
src/tdt/app/: widgets.py
src/tdt/data/: analytics.py  charting.py  obb_data.py
tests/: __init__.py  test_obb_data.py
