[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tdt"
version = "0.1.0"
description = "Treasury DV01 Trader"
readme = "README.rst"
authors = [
  {name = "Suhas Anjaria", email = "anjaria.suhas@gmail.com"}
]
maintainers = [
  {name = "Suhas Anjaria", email = "anjaria.suhas@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
   "numpy>=1.24.0",
    "pandas>=2.0.0",
    "polars>=0.19.0",
    "plotly>=5.13.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.2.0",
    "pandas-market-calendars>=4.1.4",
    "openbb>=3.2.0",
    "jupyter>=1.0.0",
    "notebook<=6.1.5",
    "jupyter_contrib_nbextensions"

]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/asuhas/tdt/issues"
changelog = "https://github.com/asuhas/tdt/blob/master/changelog.md"
homepage = "https://github.com/asuhas/tdt"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

